<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <com.hongshi.wuliudidi.view.DiDiTitleView
        android:id="@+id/transport_status_page_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/transport_status_page_tittle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:id="@+id/arrive_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/estimate_arrive_source_time"
            android:textSize="15sp"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"/>

        <TextView
            android:id="@+id/arrive_time_txt"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="2016.234"
            android:textSize="15sp"
            android:textColor="#666666"
            android:visibility="gone"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/gray"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/has_arrived_source_place_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/has_arrived"
        android:textSize="15sp"
        android:background="@color/white"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/gray"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/wait_for_dispatch_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/wait_for_dispatch"
        android:textSize="15sp"
        android:background="@color/white"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/gray"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:id="@+id/estimated_arrived_target_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/estimate_arrive_time"
            android:textSize="15sp"
            android:background="@color/white"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"/>
        <TextView
            android:id="@+id/arrive_time_txt2"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="2016.234"
            android:textSize="15sp"
            android:visibility="gone"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/gray"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/encounter_tough_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/encounter_tough"
        android:textSize="15sp"
        android:background="@color/white"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/gray"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/finish_transport_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/finish_transport"
        android:textSize="15sp"
        android:background="@color/white"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/gray"/>
  </LinearLayout>
</RelativeLayout>